--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -2,7 +2,6 @@
   "name": "counter-app",
   "private": true,
   "version": "0.0.0",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -29,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "whatwg-fetch": "^3.6.20"
   }
 }
