--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -21,7 +21,7 @@
     "@eslint/js": "^9.9.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^13.1.1",
+    "@testing-library/react": "16.3.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
